# ir-sim

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README_dev.md  changelog.md  develop.md  pyproject.toml  requirements.txt  setup.py  test.html  test.py  todo_list.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: codeql.yml  converage.yaml  converage.yml  dependency-review.yml  lint.yml  pypi-publish.yml  python-package.yml  python-publish.yml  python-version-test.yml  python-versopm-test.yml
assets/: Screen Recording 2025-12-11 at 21.04.34.mov
custom_sim/: README.md  entities.py  main.py  mapping.py  navigation.py  requirements.txt  rl_env.py  robot_world.yaml  sensor.py  train_agent.py  utils.py  world.py
doc/: requirements.txt
doc/source/: conf.py  configuration.md  configuration.rst  custom_behavior_methods.py  index.rst  install.rst  ir_sim.env.rst  ir_sim.lib.rst  ir_sim.rst  ir_sim.util.rst  ir_sim.world.rst  irsim.env.rst  irsim.lib.rst  irsim.world.rst  modules.rst  quick_start.md
docs/: .buildinfo  Makefile  configuration.html  genindex.html  index.html  install.html  ir_sim.env.html  ir_sim.lib.html  ir_sim.util.html  ir_sim.world.html  modules.html  objects.inv  py-modindex.html  quick_start.html  requirements.txt  search.html  searchindex.js  usage.html
docs/_modules/: index.html
docs/_sources/: index.rst.txt  ir_sim.env.rst.txt  ir_sim.lib.rst.txt  ir_sim.world.rst.txt  modules.rst.txt  quick_start.md.txt  quick_start.rst.txt
docs/_static/: documentation_options.js
docs/source/: about_us.md  changelog.md  comparison.md  concepts.md  conf.py  contributing.md  faq.md  index.rst
ir_sim/: version.py
ir_sim/env/: __init__.py  env_base.py  env_base3d.py  env_config.py  env_logger.py  env_obstacle.py  env_para.py  env_plot.py  env_robot.py
ir_sim/global_param/: env_param.py  path_param.py  world_param.py
ir_sim/lib/: __init__.py  behavior.py  behaviorlib.py  factory.py  generation.py  kinematics.py
ir_sim/util/: collision_dectection_geo_old.py  decorator.py  plot.py  util.py
ir_sim/world/: __init__.py  multi_object_base.py  object_base.py  object_factory.py  world.py
ir_sim2/env/: __init__.py  env_base.py  env_global.py  env_obstacle.py  env_obstalce.py  env_plot.py  env_robot.py
ir_sim2/examples/: example.yaml
ir_sim2/global_param/: env_param.py
ir_sim2/log/: Logger.py
ir_sim2/usage/: example.yaml
ir_sim2/util/: collision_dectection_geo.py  collision_dection_distance.py  util.py
ir_sim2/world/: __init__.py  world.py
irsim/: __init__.py  test_collision_avoidance.py  test_keyboard_control.py  test_keyboard_control.yaml  version.py
irsim/config/: __init__.py  env_param.py  path_param.py  world_param.py
irsim/env/: __init__.py  env_base.py  env_base3d.py  env_config.py  env_logger.py  env_plot.py  env_plot3d.py  env_theme.py
irsim/global_param/: __init__.py  env_param.py  path_param.py  world_param.py
irsim/gui/: __init__.py  keyboard_control.py  mouse_control.py  theme_config.py
irsim/lib/: __init__.py  behavior.py  behavior_methods.py  behaviorlib.py  factory.py  generation.py  kinematics.py
irsim/util/: __init__.py  random.py  util.py
irsim/world/: __init__.py  arm._base.py  arm_base.py  multi_object_base.py  object_base.py  object_base_3d.py  object_factory.py  object_factory3d.py  object_group.py  object_plot.py  world.py  world3d.py
notebooks/: quickstart.ipynb
requirements/: requirements_py311.txt  requirements_py312.txt  requirements_py313.txt  requirements_py39.txt
tests/: conftest.py  custom_behavior.py  custom_behavior.yaml  custom_behavior_methods.py  overlap.py  robot_world.yaml  test.md  test_all_objects.py  test_all_objects.yaml  test_all_objects_3d.py  test_arrow_default.py  test_behaviors.py  test_collision_avoidance.yaml  test_collision_world.yaml  test_coverage_extra.py  test_duplicate_names.yaml  test_env.py  test_fmcw_lidar2d.py  test_fov_world.yaml  test_geometry.py  test_grid_collision.py  test_grid_map.yaml  test_group_behavior.py  test_gui.py  test_keyboard.py  test_keyboard_control.yaml  test_keyboard_control2.yaml  test_keyboard_handle.py  test_kinematics.py  test_lidar_dynamic_obstacle.py  test_loop_behavior.py  test_loop_disabled.yaml  test_loop_multiple.yaml  test_loop_omni.yaml  test_loop_single.yaml  test_loop_wander_priority.yaml  test_mouse.py  test_multi_objects_world.yaml  test_object_group.py  test_objects.py  (+11 more)
usage/01empty_world/: empty_world.py  empty_world.yaml
usage/02robot_world/: car_world.yaml  robot_omni_angular_world.yaml  robot_world.py  robot_world.yaml
usage/05lidar_world/: lidar_world.py  lidar_world.yaml  lidar_world_laser_color.py  lidar_world_laser_color.yaml
usage/06multi_objects_world/: multi_objects_large.yaml  multi_objects_world.py  multi_objects_world.yaml
usage/07render_world/: render.py  render.yaml  render_save_figure.py
usage/08random_obstacle/: dynamic_random.py  dynamic_random.yaml  random_obstacle_seed.py
usage/09keyboard_control/: keyboard_control.py  keyboard_control.yaml  keyboard_control_mpl.yaml  keyboard_control_pynput.yaml  keyboard_control_pynput_omni_angular.yaml
usage/10grid_map/: grid_map_hm3d.py  grid_map_hm3d.yaml  grid_map_hm3d_test.py  grid_map_perlin.py  grid_map_perlin.yaml
usage/11collision_avoidance/: collision_avoidance.py  collision_avoidance.yaml  collision_avoidance_large.yaml  collision_avoidance_random.py  collision_avoidance_random.yaml
usage/12dynamic_obstacle/: dynamic_obstacle.py
usage/13custom_behavior/: custom_behavior.yaml  custom_behavior_methods.py  custom_behavior_methods_orca.py  custom_behavior_orca.py  custom_behavior_orca.yaml  custom_group_behavior.py  custom_group_behavior.yaml  custom_group_methods.py  custom_smooth_dash.py  custom_smooth_dash.yaml  custom_swarm_behavior.py  custom_swarm_behavior.yaml
usage/15fov_world/: fov_world.py  (+2 more)
(+531 files in other folders)
