[build-system]
requires = ["setuptools>=61.0",
            ]
                   
build-backend = "setuptools.build_meta"

[project]
name = "ir-sim"
version = "2.6.1"
authors = [
  { name="Han Ruihua", email="hanrh@connect.hku.hk" },
]
description = "IR-SIM is an open-source, lightweight robot simulator based on Python, designed for robotics navigation, control, and learning. This simulator provides a simple and user-friendly framework for simulating robots, sensors, and environments, facilitating the development and testing of robotics algorithms with minimal hardware requirements."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["robotics", "simulation", "navigation", "control", "learning"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'matplotlib',
    'shapely>=2.0.3',
    'numpy',
    'pyyaml',
    'imageio',
    'loguru',
    'scipy',
]

[project.optional-dependencies]
keyboard = ['pynput', 'tabulate']
test = ['pytest', 'pytest-cov']
lint = ['black']
all = ['pynput', 'tabulate', 'pytest', 'pytest-cov', 'imageio[ffmpeg]', 'black']


[tool.setuptools.packages.find]
include = ["irsim*"]
exclude = ["doc*", "tests*"]

[tool.setuptools.package-data]
"*" = ["*.png", "*.yaml"]

[tool.ruff]
line-length = 88
target-version = "py39"
# Optional: keep docs/examples out of lint (adjust as you like)
extend-exclude = ["doc/source/conf.py"]

[tool.ruff.lint]
# Baseline: correctness + PEP8 + imports + modernize + common bugs + sensible cleanups
select = [
  "F",    # pyflakes: undefined/unused/etc.
  "E", "W",  # pycodestyle: basic style
  "I",    # isort: import sorting
  "UP",   # pyupgrade: modernize for py39+
  "B",    # flake8-bugbear: common pitfalls
  "RUF",  # Ruff-specific rules
  "C4",   # comprehensions
  "SIM",  # simplify
  "ISC",  # implicit string concat
  "RET",  # return statements
  "PT"    # pytest-style (tests/)
]

# If you use Black or Ruff's formatter, don't fail on long lines.
ignore = ["E501"]

# Typical import sorting tweak: treat "irsim" as first-party.
[tool.ruff.lint.isort]
known-first-party = ["irsim"]

# Common, intentional re-exports in package __init__.py
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[project.urls]
"Documentation" = "https://ir-sim.readthedocs.io/en/stable/"
"Repository" = "https://github.com/hanruihua/ir-sim"
"Issues" = "https://github.com/hanruihua/ir-sim/issues"
